--- a/Russian/main/Mms.apk/res/values-ru/strings.xml
+++ b/Russian/main/Mms.apk/res/values-ru/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="action_firewall_setting">Черный список</string>
+	 <string name="pref_show_list_avatar_summary">Показывать фотографии и другую контактную информацию</string>
+     <string name="title_show_list_avatar">Фото и информация</string>
 	 <string name="mx_activate_network_allow_notice">Этот сервис будет использовать сеть.</string>
 	 <string name="pref_hide_verification_code_summary">Автоматически скрывать одноразовые пароли в уведомлениях на заблокированном экране</string>
      <string name="title_hide_verification_code">Скрывать OП на локскрине</string>
