--- a/Russian/main/YellowPage.apk/res/values-ru/strings.xml
+++ b/Russian/main/YellowPage.apk/res/values-ru/strings.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_label">Желтые страницы</string>
+	<string name="express_cainiao_banner">Подробности предоставлены Cainiao</string>
+     <string name="express_check_fetch_code">Код самовывоза</string>
+     <string name="express_goods_detail">Подробнее о товаре</string>
+     <string name="express_install_cainiao_description_1">Проверка подробностей требует приложение Cainiao. Скачать?</string>
+     <string name="express_install_cainiao_description_2">Проверка кода самовывоза требует приложение Cainiao. Скачать?</string>
+     <string name="express_install_cainiao_description_3">Другие службы требуют приложение Cainiao. Скачать?</string>
+     <string name="express_install_cainiao_ok">OK</string>
+     <string name="express_install_cainiao_title">Установите приложение Cainiao</string>
+     <string name="express_more_service">Другие службы</string>
+     <string name="express_setting_authorized_number">Авторизованный номер</string>
+     <string name="express_setting_authorized_number_add">Добавить</string>
+     <string name="express_setting_authorized_number_delete">Удалить</string>
+     <string name="express_setting_authorized_number_description">Privacy policy: the authorized phone number is only used for tracking express from Cainiao, not for other purposes.</string>
+     <string name="express_setting_authorized_number_empty">Нет авторизованного номера</string>
+     <string name="express_setting_cainiaoguoguo">Cainiao</string>
+     <string name="express_setting_code_invalid">Введите правильный код подтверждения</string>
+     <string name="express_setting_count_down_time">Повторить через %d с.</string>
+     <string name="express_setting_dialog_authority_description">Привязка номера предоставляется Желтыми страницами. Сервис требует подключения к сети. Вы согласны?</string>
+     <string name="express_setting_dialog_delete_cancel">Отмена</string>
+     <string name="express_setting_dialog_delete_description">После удаления номера, отслеживание службы Cainiao будет недоступно. Продолжить?</string>
+     <string name="express_setting_dialog_delete_failed">Ошибка удаления</string>
+     <string name="express_setting_dialog_delete_ok">OK</string>
+     <string name="express_setting_dialog_delete_success">Номер удален</string>
+     <string name="express_setting_dialog_delete_title">Удалить авторизованный номер</string>
+     <string name="express_setting_entrance_description">Authorized using phone number to query express.</string>
+     <string name="express_setting_number">Номер</string>
+     <string name="express_setting_number_invalid">Введите номер телефона правильно!</string>
+     <string name="express_setting_number_save">Проверить и сохранить</string>
+     <string name="express_setting_number_title">Добавить новый номер</string>
+     <string name="express_setting_request_failed">Ошибка запроса! Код: %s.</string>
+     <string name="express_setting_service_provider">Поставщик услуг</string>
+     <string name="express_setting_title">Authorized number setting</string>
+     <string name="express_setting_tracking_disable">Unauthorized</string>
+     <string name="express_setting_verification_code">Код</string>
+     <string name="express_setting_verification_code_acquire">Acquire code</string>
+     <string name="express_setting_verification_code_failed">Acquire code failed！</string>
+     <string name="express_setting_verification_code_hint">Msg code</string>
+     <string name="express_setting_verification_code_success">Acquire code successfully！</string>
+     <string name="express_setting_verify_failed">Проверка не удалась</string>
+     <string name="express_setting_verify_success">Проверка пройдена!</string>
+     <string name="express_update_cainiao_description">Слишком старая версия приложения Cainiao. Обновить?</string>
+     <string name="express_update_cainiao_ok">OK</string>
+     <string name="express_update_cainiao_title">Обновление приложения Cainiao</string>
 	<string name="miuishare_qzone_title">Qzone</string>
 	<string name="search_description_express">Запрос или быстрая экспресс отправка</string>
      <string name="search_keywords_express">Экспресс</string>
