--- a/Russian/main/MiuiPackageInstaller.apk/res/values-ru/strings.xml
+++ b/Russian/main/MiuiPackageInstaller.apk/res/values-ru/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="Parse_error_dlg_text">При синтаксическом анализе пакета возникла неполадка</string>
+	 <string name="miui_not_uninstall_system_app">Системные приложения нельзя удалить</string>
 	 <string name="wifi_security_WAPI_CERT">WAPI CERT</string>
      <string name="wifi_security_WAPI_PSK">WAPI PSK</string>
      <string name="wifi_security_short_WAPI_CERT">WAPI CERT</string>
